fixed small screen 7day view

--- a/index.html
+++ b/index.html
@@ -223,112 +223,112 @@
 
                           <div class="row pb-3">
                             <h6 id="name_0"></h6>
-                            <div class="col-md-3"><img id="icon_0" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_0" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_0"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_1"></h6>
-                            <div class="col-md-3"><img id="icon_1" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_1" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_1"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_2"></h6>
-                            <div class="col-md-3"><img id="icon_2" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_2" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_2"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_3"></h6>
-                            <div class="col-md-3"><img id="icon_3" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_3" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_3"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_4"></h6>
-                            <div class="col-md-3"><img id="icon_4" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_4" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_4"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_5"></h6>
-                            <div class="col-md-3"><img id="icon_5" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_5" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_5"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_6"></h6>
-                            <div class="col-md-3"><img id="icon_6" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_6" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_6"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_7"></h6>
-                            <div class="col-md-3"><img id="icon_7" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_7" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_7"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_8"></h6>
-                            <div class="col-md-3"><img id="icon_8" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_8" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_8"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_9"></h6>
-                            <div class="col-md-3"><img id="icon_9" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_9" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_9"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_10"></h6>
-                            <div class="col-md-3"><img id="icon_10" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_10" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_10"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_11"></h6>
-                            <div class="col-md-3"><img id="icon_11" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_11" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_11"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_12"></h6>
-                            <div class="col-md-3"><img id="icon_12" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_12" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_12"></p>
                             </div>
                           </div>
 
                           <div class="row pb-3">
                             <h6 id="name_13"></h6>
-                            <div class="col-md-3"><img id="icon_13" /></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 col-sm-2"><img id="icon_13" /></div>
+                            <div class="col-md-9 col-sm-10">
                               <p id="text_13"></p>
                             </div>
                           </div>
