--- a/index_slc.html
+++ b/index_slc.html
@@ -512,6 +512,84 @@
               <h2 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  ALTA
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
+                <div class="accordion-body">
+                  <div class="row">
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">Albion Basin</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="alta_cam0" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">Mount Baldy</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="alta_cam1" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">12 Hour Snow Stake</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="alta_cam2" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">Mount Superior</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="alta_cam3" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">High Rustler</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="alta_cam4" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">Sugarloaf Peak</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="alta_cam5" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">East Greeley</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="alta_cam6" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">Salt Lake Valley</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="alta_cam7" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   Parleys (I-80)
                 </button>
               </h2>
