--- a/index_slc.html
+++ b/index_slc.html
@@ -587,13 +587,13 @@
               </div>
             </div>
             <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
+              <h2 class="accordion-header" id="headingFour">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                   Parleys (I-80)
                 </button>
               </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
+              <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour">
                 <div class="accordion-body">
                   <div class="row">
                     <div class="col-xl-4 col-md-6 mb-4">
